...

  @override
  Widget build(BuildContext context) {
    final fabColor = Theme.of(context).colorScheme.secondary;

    return GestureDetector(
      key: const ValueKey('home.newReport'),
      onTapDown: _onTapDown,
      onTapCancel: _onTapCancel,
      onTapUp: _onTapUp,
      child: AnimatedScale(
        scale: scale,
        duration: const Duration(milliseconds: 120),
...
